--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 </div>
 </div>
 
-    <script src="main.js"></script>
+    <script src="maain.js"></script>
     <script src="all.min.js"></script>
 </body>
 </html>
