--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         <h2>find your Zodiac-sign Here</h2>
     
     <form>
-        <input class="inptV" type="date" placeholder="" required>
+        <input class="inptV" type="date" placeholder="Your BirthDay" required>
         <input class="inptP" type="text" placeholder="Your Name.." required>
         <select name="Gender" id="genderr" title="choose your Gender">
             <option value=""selected>Gender</option>
