--- a/public/Tuarus.html
+++ b/public/Tuarus.html
@@ -111,7 +111,7 @@
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-success"></strong>
-              <h3 class="mb-0">Pisces's</h3>
+              <h3 class="mb-0">Tuarus's</h3>
               <div class="mb-1 text-muted">BULL  |  APR 20 - MAY 20</div>
               <p><strong>Spirit Color</strong> :Pink<br>
                 <strong>Lucky Gem</strong> : Emerald<br>
