--- a/public/index.html
+++ b/public/index.html
@@ -105,11 +105,11 @@
 
 <footer class="blog-footer text-center bg-dark text-white">
   <p>webapp sample made with &#10084 by <a href="https://facebook.com/">m$d s@@"d</a> <a href="https://twitter.com/mdo"></a>.</p>
- <span><a href="www.github.com"><i class="fab fa-github-square"></i>  GitHub</a></span> 
- <span><a href="www.twitter.com"><i class="fab fa-twitter-square"></i> Twitter</a></span> 
- <span><a href="www.facebook.com"> <i class="fab fa-facebook"></i> Facebook</a></span>
+ <span class="text-white"><a href="www.github.com"><i class="fab fa-github-square"></i>  GitHub</a></span> 
+ <span class="text-white"><a href="www.twitter.com"><i class="fab fa-twitter-square"></i> Twitter</a></span> 
+ <span class="text-white"><a href="www.facebook.com"> <i class="fab fa-facebook"></i> Facebook</a></span>
   <p>
-    <a href="#">&#11014 Go back</a>
+    <a class="text-white" href="#">&#11014 Go back</a>
   </p>
 </footer>
 
