--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
 
 <body>
+
     <div class="container">
 
         <header class="blog-header py-3">
@@ -59,7 +60,7 @@
         <h2>find your Zodiac-sign Here</h2>
     
     <form>
-        <input class="inptV" type="date" placeholder="Your BirthDay" required>
+        <input class="inptV" type="date" placeholder="" required>
         <input class="inptP" type="text" placeholder="Your Name.." required>
         <select name="Gender" id="genderr" title="choose your Gender">
             <option value=""selected>Gender</option>
@@ -105,9 +106,9 @@
 
 <footer class="blog-footer text-center bg-dark text-white">
   <p>webapp sample made with &#10084 by <a href="https://facebook.com/">m$d s@@"d</a> <a href="https://twitter.com/mdo"></a>.</p>
- <span class="text-white"><a href="www.github.com"><i class="fab fa-github-square"></i>  GitHub</a></span> 
- <span class="text-white"><a href="www.twitter.com"><i class="fab fa-twitter-square"></i> Twitter</a></span> 
- <span class="text-white"><a href="www.facebook.com"> <i class="fab fa-facebook"></i> Facebook</a></span>
+ <span><a class="text-white" href="www.github.com"><i class="fab fa-github-square text-white"></i>  GitHub</a></span> 
+ <span><a class="text-white" href="www.twitter.com"><i class="fab fa-twitter-square text-white"></i> Twitter</a></span> 
+ <span><a class="text-white" href="www.facebook.com"> <i class="fab fa-facebook text-white"></i> Facebook</a></span>
   <p>
     <a class="text-white" href="#">&#11014 Go back</a>
   </p>
